# MediaManagerBot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: workflow.yml
mediamanager/: bot.py  logger.py  settings.py  utils.py
mediamanager/managers/: approval_manager.py  media_manager.py  stats_manager.py
mediamanager/plugins/: approval_handler.py  auxiliaries.py  custom_filters.py  media_handler.py  start.py  stats.py
