[project]
name = "mediamanagerbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram>=2.1.37",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/mediamanager"]
